# launchr

./: Cargo.toml  README.md  flake.nix
benches/: desktop_files.rs  files.rs  render.rs  text_render.rs
src/: app.rs  config.rs  draw.rs  editor.rs  file_finder.rs  item.rs  launcher.rs  lib.rs  main.rs  recent.rs  render.rs  text.rs  util.rs  winit_app.rs
src/component/: container.rs  mod.rs  text.rs
src/mode/: apps.rs  dmenu.rs  file.rs  files.rs  mod.rs  run.rs
src/render/: buffer.rs  cpu.rs  mod.rs  texture.rs
src/ui/: color.rs  column.rs  container.rs  flex.rs  list.rs  math.rs  mod.rs  sized_box.rs  text.rs
tests/: text.rs
