[package]
name = "launchr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
clap = { version = "4.5", features = ["derive"] }
cosmic-text = { version = "0.14.2", features = ["shape-run-cache"] }
crossbeam-channel = "0.5"
dirs = "6.0"
ignore = "0.4"
log = "0.4"
nucleo = "0.5.0"
once_cell = "1.21"
open = "5.3"
pretty_env_logger = "0.5"
rayon = "1.11"
serde = { version = "1.0.226", features = ["derive"] }
softbuffer = "0.4"
toml = "0.9.7"
walkdir = "2.5"
winit = "0.30"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
image = "0.25.8"
serde_json = "1.0"

[[bench]]
name = "desktop_files"
harness = false

[[bench]]
name = "text_render"
harness = false

