[package]
name = "launchr"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
cosmic-text = { version = "0.19", features = ["shape-run-cache"] }
dirs = "6.0"
ignore = "0.4"
indexmap = "2.14"
libc = "0.2"
log = "0.4"
nucleo = "0.5"
once_cell = "1.21"
open = "5.3"
postcard = { version = "1.1", features = ["alloc", "use-std"] }
pretty_env_logger = "0.5"
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
softbuffer = "0.4"
toml = "1.1"
walkdir = "2.5"
winit = "0.30"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
image = "0.25"
serde_json = "1.0"

[[bench]]
name = "text_render"
harness = false

